Baseline/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/extensions/greenfoot.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/bluejeditor.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/bluejext.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/AppleJavaExtensions.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/junit-4.11.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/bluej.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/diffutils-1.2.1.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/commons-httpclient-3.1.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/commons-logging-api-1.1.2.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/commons-codec-1.3.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/jl1.0.1.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/opencsv-2.3.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/xom-1.2.9.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/guava-17.0.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/javassist-3.18.0.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/commons-vfs2-2.0.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/httpclient-4.1.1.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/httpcore-4.1.jar:/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/httpmime-4.1.1.jar:/Users/niyatpatel/Documents/Study/CMPE 202/cmpe202-intelligame/Baseline
-d
/Users/niyatpatel/Documents/Study/CMPE 202/cmpe202-intelligame/Baseline/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/private/var/folders/m9/s8952ftj61v6nbs8877jdjlr0000gn/T/AppTranslocation/5CDEB76E-9E22-4C0B-94F1-8D0534B62538/d/Greenfoot.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/niyatpatel/Documents/Study/CMPE 202/cmpe202-intelligame/Baseline/TryAgain.java
<---- end of javadoc command ---->
Loading source file /Users/niyatpatel/Documents/Study/CMPE 202/cmpe202-intelligame/Baseline/TryAgain.java...
/Users/niyatpatel/Documents/Study/CMPE 202/cmpe202-intelligame/Baseline/TryAgain.java:21: error: <identifier> expected
            Greenfoot.();
                      ^
1 error
